internal/xds/translator/testdata/out/xds-ir/http-route-response-remove-headers.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  responseHeadersToAdd:
  - append: false
    header:
      key: x-request-id
      value: '%REQ(X-REQUEST-ID)%'
  virtualHosts:
  - domains:
    - '*'
    name: first-listener
    routes:
    - match:
        prefix: /
      name: response-header-route
      responseHeadersToRemove:
      - some-header5
      - some-header6
      route:
        cluster: response-header-route
